dump/src/reader/v5/snapshots/dump__reader__v5__test__read_dump_v5-9.snap
---
source: dump/src/reader/v5/mod.rs
expression: movies.settings()
---
Ok(
    Settings {
        displayed_attributes: Reset,
        searchable_attributes: Reset,
        filterable_attributes: Set(
            {
                "genres",
                "id",
            },
        ),
        sortable_attributes: Set(
            {
                "release_date",
            },
        ),
        ranking_rules: Set(
            [
                "words",
                "typo",
                "proximity",
                "attribute",
                "sort",
                "exactness",
                "release_date:asc",
            ],
        ),
        stop_words: Set(
            {},
        ),
        synonyms: Set(
            {},
        ),
        distinct_attribute: Reset,
        typo_tolerance: Set(
            TypoSettings {
                enabled: Set(
                    true,
                ),
                min_word_size_for_typos: Set(
                    MinWordSizeTyposSetting {
                        one_typo: Set(
                            5,
                        ),
                        two_typos: Set(
                            9,
                        ),
                    },
                ),
                disable_on_words: Set(
                    {},
                ),
                disable_on_attributes: Set(
                    {},
                ),
            },
        ),
        faceting: Set(
            FacetingSettings {
                max_values_per_facet: Set(
                    100,
                ),
            },
        ),
        pagination: Set(
            PaginationSettings {
                max_total_hits: Set(
                    1000,
                ),
            },
        ),
        _kind: PhantomData<dump::reader::v5::settings::Checked>,
    },
)
